<resources>
    <string name="app_name">Breakout</string>
    <string name="start_info">
        Your task is to get all of the bricks out of board.\n
        To do so, you can\'t let the ball fall down. As much as 3 lives should be more than enough to win one time. How long can you survive?
    </string>
    <string name="controls">
        Controls:\n
        - press on lower screen sides or tilt your phone to move paddle left/right,\n
        - tap on top half of the screen to pause the game, tap anywhere to continue.
    </string>
    <string name="bricks">
        Bricks:\n
        - RED: normal bricks, just hit them,\n
        - BLUE: ice brick, requires two hits,\n
        - GREEN: slime brick, will slow down the ball,\n
        - YELLOW: fire brick, will speed up the ball.
    </string>
    <string name="start">Start</string>
    <string name="columns">Columns:</string>
    <string name="rows">Rows:</string>
    <string name="tilt_control">Tilt control</string>
</resources>
